Add Education landing page and improvements
- Add gated educational blog page at /education with content on social media domination, cinematic content, ads, and automated booking
- Content requires name, email, phone to unlock (blurred background until submitted)
- Add SocialProof slider to System page
- Update SocialProof heading to "Businesses Already Getting Booked Out With This System"
- Fix DecemberLeadQuiz modal centering for better mobile experience
- Add Netlify form handler for education-optin

--- a/index.html
+++ b/index.html
@@ -87,5 +87,15 @@
       <input type="email" name="email" />
       <input type="tel" name="phone" />
     </form>
+    
+    <!-- Hidden Netlify Form for Education Opt-in -->
+    <form name="education-optin" method="POST" data-netlify="true" netlify-honeypot="bot-field" hidden>
+      <input type="hidden" name="form-name" value="education-optin" />
+      <input name="bot-field" />
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="tel" name="phone" />
+      <input type="text" name="submittedAt" />
+    </form>
   </body>
 </html>
